Deploy github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alexk9081.github.io/",
+  "homepage": "https://alexk9081.github.io/my-webpage/",
   "name": "react-course",
   "version": "0.1.0",
   "private": true,
